--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/img_5"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/img_5"
         android:supportsRtl="true"
         android:theme="@style/Theme.Bi_a"
         tools:targetApi="31">
@@ -22,7 +22,19 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".LoginActivity"
+            android:exported="false">
+        </activity>
+        <activity
             android:name=".MainActivity"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".TableActivity"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".StickActivity"
             android:exported="false">
         </activity>
     </application>
